--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "sass": "^1.34.0",
+    "sass": "1.32.13",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.12"
   },
