--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "CI= vue-cli-service build",
+    "build": "vue-cli-service build --silent",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
