--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "sass": "1.32.13",
+    "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.12"
   },
